Fix Java 8 compatibility for bisect tooling